--- a/src/Components/Plans/Plans.css
+++ b/src/Components/Plans/Plans.css
@@ -5,8 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 4rem;
-    position: relative;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .plans{
@@ -29,6 +28,7 @@
 .plan:nth-child(2){
     transform: scale(1.1);
     background: linear-gradient(to bottom right, #ef6767, red);
+   
 }
 
 .plan>:nth-child(2){
